# src/web/openapi.json
@@ -872,6 +872,37 @@
         "summary": "Store Attachment"
       }
     },
+    "/api/v1/attachments/content": {
+      "post": {
+        "operationId": "read_attachment_api_v1_attachments_content_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AttachmentBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Read Attachment"
+      }
+    },
     "/api/v1/bootstrap": {
       "get": {
         "operationId": "bootstrap_api_v1_bootstrap_get",
